<resources>
    <string name="app_name">MVVMTodo</string>
    <string name="task_name">Task name</string>
    <string name="test_task_name">Important task</string>
    <string name="date">"Date: "</string>
    <string name="description">Description</string>
    <string name="search">Search</string>
    <string name="sort">Sort</string>
    <string name="sort_by_name">Sort by name</string>
    <string name="sort_by_todo_date">Sort by deadline date</string>
    <string name="hide_completed">Hide completed</string>
    <string name="delete_completed">Delete all completed tasks</string>
    <string name="github">Github</string>
</resources>